<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.grocery.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.grocery.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.grocery.ui.Category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.grocery.OffersFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_newProduct"
        android:name="com.example.grocery.NewProductFragment"
        android:label="@string/menu_newProduct"
        tools:layout="@layout/fragment_new_product" />
    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.example.grocery.MyOrdersFragment"
        android:label="@string/menu_myOrders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_myCarts"
        android:name="com.example.grocery.MyCartsFragment"
        android:label="@string/menu_myCarts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>